--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="../../assets/css/main.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="assets/css/responsive.css" type="text/css"> -->
-    <link rel="icon" type="image/jpg" sizes="60x32" href="assets/images/icons/p logo.jpg">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>politifact</title>
 
-    <script src="assets/js/javascript.js"></script>
+    <!-- <script src="assets/js/javascript.js"></script> -->
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
         <video autoplay muted loop id="myVideo">
 
 
-            <source src="assets/images/essecial/Flag - 117755.mp4" type="video/mp4">
+            <source src="../../assets/images/essecial/Flag - 117755.mp4" type="video/mp4">
             <track default>
         </video>
 
@@ -54,7 +54,7 @@
         <div class="headvideo1">
 
             <video autoplay muted loop id="myVideo">
-                <source src="assets/images/essecial/Pattern - 85590.mp4" type="video/mp4">
+                <source src="../../assets/images/essecial/Pattern - 85590.mp4" type="video/mp4">
                 <track default />
             </video>
 
@@ -74,9 +74,9 @@
             <div class="topic1">
 
 
-                <p class="contact"><a href="pages/your opinion/join now.html">தொடர்பு</a></p>
-                <p class="contact">|</p>
-                <p class="contact"><a href="pages/your opinion/your opnion.html">பின்னூட்டம்</a></p>
+                
+                
+                <p class="contact"><a href="../your opinion/profilepage.html"><img src="../../assets/images/ministers/not-iamge.jpg" alt="icon"></a></p>
                 <p><a href="English-version/home/homepage-english.html">English</a></p>
                 <p>|</p>
                 <p><a href="index.html">தமிழ்</a></p>
@@ -112,11 +112,11 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                         <li class="nav-item pe-5">
-                            <a class="nav-link active" aria-current="page" href="index.html">முகப்பு</a>
+                            <a class="nav-link active" aria-current="page" href="../home/home.html">முகப்பு</a>
                         </li>
 
                         <li class="nav-item pe-5">
-                            <a class="nav-link" href="pages/portfolio/parties-profile.html">விவரம்</a>
+                            <a class="nav-link" href="../portfolio/parties-profile.html">விவரம்</a>
                         </li>
 
                         <li class="nav-item dropdown pe-5">
@@ -125,13 +125,13 @@
                                 அறிக்கைகள்
                             </a>
                             <ul class="dropdown-menu bg-light">
-                                <li><a class="dropdown-item" href="pages/manifesto/bending.html">நிலுவை</a></li>
-                                <li><a class="dropdown-item" href="pages/manifesto/complte.html">நிறைவு</a></li>
+                                <li><a class="dropdown-item" href="../manifesto/bending.html">நிலுவை</a></li>
+                                <li><a class="dropdown-item" href="../pages/manifesto/complte.html">நிறைவு</a></li>
                             </ul>
                         </li>
 
                         <li class="nav-item pe-5">
-                            <a class="nav-link" href="pages/passt leaders/past leaders.html">தலைவர்கள்</a>
+                            <a class="nav-link" href="../passt leaders/past leaders.html">தலைவர்கள்</a>
                         </li>
 
                         <li class="nav-item dropdown pe-5">
@@ -140,8 +140,8 @@
                                 மேலும்
                             </a>
                             <ul class="dropdown-menu bg-light">
-                                <li><a class="dropdown-item" href="pages/more/Governer list.html">ஆளுநர்கள்</a></li>
-                                <li><a class="dropdown-item" href="pages/more/mla.html">பிரதிநிதிகள்</a></li>
+                                <li><a class="dropdown-item" href="../more/Governer list.html">ஆளுநர்கள்</a></li>
+                                <li><a class="dropdown-item" href="../more/mla.html">பிரதிநிதிகள்</a></li>
 
                             </ul>
                         </li>
@@ -176,7 +176,7 @@
 
 
         <button type="button" class="btn btn-outline-dark "><a class="text-center text-decoration-none"
-                href="pages/your opinion/your opnion.html">தங்களது கருத்து</a></button>
+                href="../your opinion/your opnion.html">தங்களது கருத்து</a></button>
 
     </div>
 
@@ -186,7 +186,7 @@
 
         <h1 class="h1 text-center fs-5">அரசியலுக்கு வரவேற்கிறோம்</h1>
 
-        <img src="assets/images/essecial/Capture.PNG" class=" decoration img-fluid" alt="">
+        <img src="../../assets/images/essecial/Capture.PNG" class=" decoration img-fluid" alt="">
 
         <div class="box d-flex">
 
@@ -205,7 +205,7 @@
 
             <div class="sideimage">
 
-                <img src="assets/images/essecial/motivation.jpg" class="img-fluid" alt="error image">
+                <img src="../../assets/images/essecial/motivation.jpg" class="img-fluid" alt="error image">
 
             </div>
 
@@ -236,7 +236,7 @@
                 அர்த்தமல்ல.
             </h2>
             <button type="button" class="btn btn-outline-dark p-2 "><a class="text-center text-decoration-none"
-                    href="pages/your opinion/join now.html">இப்போது சேரவும்</a></button>
+                    href="../../index.html">இப்போது சேரவும்</a></button>
 
         </div>
 
@@ -288,7 +288,7 @@
             <div class="news1">
 
 
-                <img src="assets/images/ministers/news3.jpg" class="img-fluid" alt="error image">
+                <img src="../../assets/images/ministers/news3.jpg" class="img-fluid" alt="error image">
                 <h2>அரசியல்</h2>
                 <p>
                     சினிமாவில் காவி நிறம் அணியக் கூடாது என்றால், கறுப்பு ஆடைகள் அணிந்து வில்லனாக நடிப்பதால்
@@ -301,7 +301,7 @@
             </div>
 
             <div class="news1">
-                <img src="assets/images/ministers/news2.jpg" class="img-fluid" alt="error image">
+                <img src="../../assets/images/ministers/news2.jpg" class="img-fluid" alt="error image">
                 <h2>அரசியல்</h2>
                 <p>தமிழ்நாடு அமைச்சரவையில் பெரும் எதிர்பார்ப்பிற்கு இடையில் பல்வேறு மாற்றங்கள் செய்யப்பட்டு உள்ளன.
                     முதல்வர் ஸ்டாலினின் ஒரு இலாக்காவையும் சேர்த்து மொத்தமாக 11 அமைச்சர்களின் இலாக்காக்கள்
@@ -310,7 +310,7 @@
             </div>
 
             <div class="news1">
-                <img src="assets/images/ministers/news1.jpg" class="img-fluid" alt="error image">
+                <img src="../../assets/images/ministers/news1.jpg" class="img-fluid" alt="error image">
                 <h2>அரசியல்</h2>
                 <p>சென்னை: கட்சித் தலைமை ஒரு குடும்பத்திடம் மட்டும் தொடர்வதுதான் வாரிசு அரசியல், பாஜகவில் இருப்பது
                     வாரிசு அரசியல் அல்ல.. முதல்வர் ஸ்டாலின் பட்டியலினத்தை சேர்ந்தவரை துணை முதலமைச்சராக்க வேண்டும்.
@@ -334,10 +334,10 @@
                 வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை
                 ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
             </p>
-            <img src="assets/images/icons/icon-facebook.svg" alt="error image">
-            <img src="assets/images/icons/icon-instagram.svg" alt="error image">
-            <img src="assets/images/icons/icon-pinterest.svg" alt="error image">
-            <img src="assets/images/icons/icon-twitter.svg" alt="error image">
+            <img src="../../assets/images/icons/icon-facebook.svg" alt="error image">
+            <img src="../../assets/images/icons/icon-instagram.svg" alt="error image">
+            <img src="../../assets/images/icons/icon-pinterest.svg" alt="error image">
+            <img src="../../assets/images/icons/icon-twitter.svg" alt="error image">
 
         </div>
 
