--- a/pages/portfolio/profile/profile.html
+++ b/pages/portfolio/profile/profile.html
@@ -185,36 +185,10 @@
             </ul>
         </div> -->
 
-        <script>
-            let cmcontent_div;
-            let birth_div;
-            let head2;
-            let describe;
 
+        <!-- <div class="cmcontent"> -->
 
-
-            //cmcontent
-            cmcontent_div = document.createElement("div");
-            cmcontent_div.setAttribute("clss", "cmcontent");
-
-            birth_div = document.createElement("div");
-            birth_div.setAttribute("id", "birht");
-            cmcontent_div.append(birth_div);
-
-            head2 = document.createElement("h2");
-            head2.innerText = "balaji";
-            birth_div.append(head2);
-
-            describe = document.createElement("p");
-            describe.innerText = "1953 ஆம் ஆண்டு மார்ச் 1ம் தேதி கலைஞர் மு.கருணாநிதி-தயாளு தம்பதிக்கு மூன்றாவது மகனாக பிறந்தார் தளபதி என  எல்லோராலும் அன்புடன் அழைக்கப்படும் மு.க.ஸ்டாலின்.ரஷ்யாவின் அதிபர் ஜோசப் ஸ்டாலின் நினைவாக ஸ்டாலின எனப் பெயர் சூட்டினார் அவரது தந்தை கலைஞர் மு கருணாநிதி.தளபதி உடன் பிறந்தோர், முத்து, அழகிரி, செல்வி,தமிழரசு  மற்றும் கனிமொழி."
-
-
-        </script>
-
-
-        <div class="cmcontent">
-
-            <div id="birth">
+        <!-- <div id="birth">
 
                 <h2><strong>பிறப்பு:</strong></h2>
                 <p>1953 ஆம் ஆண்டு மார்ச் 1ம் தேதி கலைஞர் மு.கருணாநிதி-தயாளு தம்பதிக்கு மூன்றாவது மகனாக பிறந்தார் தளபதி
@@ -224,10 +198,10 @@
                     பெயர் சூட்டினார் அவரது தந்தை கலைஞர் மு கருணாநிதி. தளபதி உடன் பிறந்தோர், முத்து, அழகிரி, செல்வி,
                     தமிழரசு
                     மற்றும் கனிமொழி.</p>
-            </div>
+            </div> -->
 
 
-            <div id="educatiion">
+        <!-- <div id="educatiion">
                 <h2><strong>கல்வி</strong></h2>
                 <p>எம்.கே.ஸ்டாலின் சென்னை கிறிஸ்டியன் கல்லூரி மேல்நிலைப் பள்ளியில் பள்ளிப் படிப்பை முடித்தார். பின்னர்
                     விவேகானந்தா கல்லூரியில் பல்கலைக்கழகத்திற்கு முந்தைய படிப்பை எடுத்தார். பின்னர், ஸ்டாலின் பி.ஏ. 1973
@@ -272,6 +246,7 @@
 
                 <div class="assets">
 
+                    
                     <table>
 
                         <tr>
@@ -310,11 +285,11 @@
                 </div>
 
 
-            </div>
+            </div> -->
 
 
 
-        </div>
+    </div>
 
     </div>
 
@@ -362,454 +337,7 @@
         </div>
 
     </div>
-    <script>
-        const minister_name = [
-
-            {
-                "image": {
-                    "sourse": "../../../assets/images/ministers/udhayanithi.jpg",
-                    "alter": "udhayanithi stalin"
-                },
-                "name": "பெயர்: உதயநிதி ஸ்டாலின்",
-                "name1": "NAME: Udhayanidhi Stalin",
-                "name2": "பதவி: விளையாட்டுத்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/duraimurugan.jpg",
-                    "alter": "DURAIMURUGAN"
-                },
-                "name": "பெயர் : துரைமுருகன்",
-                "name1": "NAME: Durai Murugan",
-                "name2": "பதவி: பொதுச்செயலாளர்"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/kn neru.jpg",
-                    "alter": "KN NERU IMAGE"
-                },
-                "name": "பெயர்: கே. என். நேரு",
-                "name1": "NAME: K. N. Nehru",
-                "name2": "பதவி: நகர்ப்புற வளர்ச்சித்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/periyasami.jpg",
-                    "alter": "PERIYASAMI IMAGE"
-                },
-                "name": "பெயர்: ஐ. பெரியசாமி ",
-                "name1": "NAME: I. Periyasamy",
-                "name2": "பதவி: கூட்டுறவுத்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/ponkmudi.jpg",
-                    "alter": "PONMUDI IMAGE"
-                },
-                "name": "பெயர்: க. பொன்முடி",
-                "name1": "NAME: K. Ponmudy",
-                "name2": "பதவி: உயர் கல்வி "
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/velu.jpg",
-                    "alter": "udhayanithi stalin"
-                },
-                "name": "பெயர்: எ. வ. வேலு",
-                "name1": "NAME: E. V. Velu",
-                "name2": "பதவி: உணவுத் துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/pannerselvam.jpg",
-                    "alter": "udhayanithi stalin"
-                },
-                "name": "பெயர்: ஆர். கே. பன்னீர்செல்வம்",
-                "name1": "NAME: M. R. K. Panneerselvam",
-                "name2": "பதவி: சமூக நலத்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/tanarasu.jpg",
-                    "alter": "thangam thennarasu"
-                },
-                "name": "பெயர்: தங்கம் தென்னரசு",
-                "name1": "NAME: Thangam Thennarasu",
-                "name2": "பதவி: தொல்லியல்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/ranachanran.jpg",
-                    "alter": "ramachandiran"
-                },
-                "name": "பெயர்: ஆர்.ராமச்சந்திரன்",
-                "name1": "NAME: Ramachandran",
-                "name2": "பதவி: தமிழக வருவாய் துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/regubathy.jpg",
-                    "alter": "ragupahty"
-                },
-                "name": "பெயர்: எஸ். ரகுபதி",
-                "name1": "NAME: S. Regupathy",
-                "name2": "பதவி: சட்டத்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/muthusamy.jpg",
-                    "alter": "muthusaami"
-                },
-                "name": "பெயர்: சு. முத்துசாமி",
-                "name1": "NAME: S. Muthusamy",
-                "name2": "பதவி: வீட்டு வசதித்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/periyakaruppan.jpg",
-                    "alter": "periyasami"
-                },
-                "name": "பெயர்: கே. ஆர். பெரியகருப்பன்",
-                "name1": "NAME: K.R.Periyakaruppan",
-                "name2": "பதவி:  ஊரகவளர்ச்சி"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/anbarasan.jpg",
-                    "alter": "anbarasan"
-                },
-                "name": "பெயர்: தா. மோ. அன்பரசன்",
-                "name1": "NAME: T. M. Anbarasan",
-                "name2": "பதவி: ஊரக தொழிற்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/saminathan.jpg",
-                    "alter": "saaminathan"
-                },
-                "name": "பெயர்: மு. பெ. சாமிநாதன்",
-                "name1": "NAME: M. P. Saminathan",
-                "name2": "பதவி: செய்தித்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/geeth.jpg",
-                    "alter": "keetha jeevan"
-                },
-                "name": "பெயர்: பெ. கீதா ஜீவன்",
-                "name1": "NAME: Geetha Jeevan",
-                "name2": "பதவி: மகளிர் உரிமைத்துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/anith.jpg",
-                    "alter": "anitharadhakirishanan"
-                },
-                "name": "பெயர்: அனிதா ராதாகிருஷ்ணன்",
-                "name1": "NAME: Anitha R. Radhakrishnan",
-                "name2": "பதவி: கால்நடை பராமரிப்பு"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/sivakumar.jpg",
-                    "alter": "sivakumar"
-                },
-                "name": "பெயர்: S .சிவகுமார்",
-                "name1": "NAME: S S. Sivakumar",
-                "name2": "பதவி: போக்குவரத்து"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/ramachandran.jpg",
-                    "alter": "ramachanran"
-                },
-                "name": "பெயர்:  K.இராமச்சந்திரன்",
-                "name1": "NAME:  K. Ramachandran",
-                "name2": "பதவி: வனவிலங்கு"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/sakkaraporni.jpg",
-                    "alter": "sakrabaani"
-                },
-                "name": "பெயர்: அர. சக்கரபாணி",
-                "name1": "NAME: R. Sakkarapani",
-                "name2": "பதவி: உணவுத் துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/sendil balji.jpg",
-                    "alter": "sendhilbalaji"
-                },
-                "name": "பெயர்: வே. செந்தில்பாலாஜி",
-                "name1": "NAME: V. Senthilbalaji",
-                "name2": "பதவி: மின்சாரம்"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/rs ganthi.jpg",
-                    "alter": "rs gandhi"
-                },
-                "name": "பெயர்:  ஆர். காந்தி",
-                "name1": "NAME: R. Gandhi",
-                "name2": "பதவி: கைத்தறி"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/subramani.jpg",
-                    "alter": "subramaniyan"
-                },
-                "name": "பெயர்: மா. சுப்பிரமணியம்",
-                "name1": "NAME: M. Subramaniam",
-                "name2": "பதவி: மக்கள் நல்வாழ்வு"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/mirthi.jpg",
-                    "alter": "moorhty p image"
-                },
-                "name": "பெயர்: பி. மூர்த்தி",
-                "name1": "NAME: Moorthy P",
-                "name2": "பதவி: வணிகவரி"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/rajakannapan.jpg",
-                    "alter": "udhayanithi stalin"
-                },
-                "name": "பெயர்: இராஜ கண்ணப்பன்",
-                "name1": "NAME: R. S. Raja Kannappan",
-                "name2": "பதவி: பிற்படுத்தப்பட்டோர்"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/segar babu.jpg",
-                    "alter": "segar babu"
-                },
-                "name": "பெயர்:  பி. கே. சேகர் பாபு",
-                "name1": "NAME: P. K. Sekar Babu",
-                "name2": "பதவி: அறநிலையத் துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/palanivel.jpg",
-                    "alter": "palanivel thigarajan"
-                },
-                "name": "பெயர்: பழனிவேல் தியாகராஜன்",
-                "name1": "NAME: Palanivel Thiagarajan",
-                "name2": "பதவி: நிதித்துறை அமைச்சர்"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/nasar.jpg",
-                    "alter": "s m nasar"
-                },
-                "name": "பெயர்: சா. மு. நாசர்",
-                "name1": "NAME: S. M. Nasar",
-                "name2": "பதவி: பால் பண்ணை வளர்ச்சி"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/magesh.jpg",
-                    "alter": "Anbil Mahesh Poyyamozhi"
-                },
-                "name": "பெயர்: அன்பில் மகேஷ்",
-                "name1": "NAME: Anbil Mahesh Poyyamozhi",
-                "name2": "பதவி: பள்ளிக் கல்வித் துறை"
-            },
-            {
-                "image": {
-                    "sourse": "../../assets/images/ministers/mano.jpg",
-                    "alter": "mano thangaraj"
-                },
-                "name": "பெயர்: மனோ தங்கராஜ்",
-                "name1": "NAME: T. Mano Thangaraj",
-                "name2": "பதவி: தொழில்நுட்பத்துறை"
-            },
-        ]
-
-        const url = window.location.search;
-        const urlParams = new URLSearchParams(url);
-        const name = urlParams.get("name");
-
-
-        let cmImage;
-
-        let cmPicture;
-
-        let cm_name;
-
-        let position;
-
-        let position1;
-
-
-        let position2;
-
-        let position3;
-
-        let position4;
-
-        let position5;
-
-
-        // cmImage
-        cmImage = document.createElement("div");
-        cmImage.setAttribute("class", "cm-image");
-
-
-        //cmPicture
-
-        cmPicture = document.createElement("img");
-        cmPicture.setAttribute("src", minister_name[0].image.sourse);
-        cmImage.append(cmPicture);
-
-        document.querySelector(".headprofile").append(cmImage);
-
-        // cm_name
-        cm_name = document.createElement("div");
-        cm_name.setAttribute("class", "cm-name");
-
-
-        // position
-
-        position = document.createElement("p");
-        position.innerText = minister_name[0]["name2"];
-        cm_name.append(position);
-
-        position1 = document.createElement("p");
-        position1.innerText = minister_name[0]["name2"];
-        cm_name.append(position1);
-
-        position2 = document.createElement("p");
-        position2.innerText = minister_name[0]["name2"];
-        cm_name.append(position2);
-
-        position3 = document.createElement("p");
-        position3.innerText = minister_name[0]["name2"];
-        cm_name.append(position3);
-
-        position4 = document.createElement("p");
-        position4.innerText = minister_name[0]["name2"];
-        cm_name.append(position4);
-
-        position5 = document.createElement("p");
-        position5.innerText = minister_name[0]["name2"];
-        cm_name.append(position5);
-
-
-        document.querySelector("div.headprofile").append(cm_name);
-
-
-
-
-
-
-
-
-
-
-
-
-
-        let profile_nav;
-
-        let unorderlist;
-
-        let list1;
-
-        let link_anchor1;
-
-        let list2;
-
-        let link_anchor2;
-
-        let list3;
-
-        let link_anchor3;
-
-        let list4;
-
-        let link_anchor4;
-
-        let list5;
-
-        let link_anchor5;
-
-        let list6;
-
-        let link_anchor6;
-
-
-        //profile_nav
-        profile_nav = document.createElement("div");
-        profile_nav.setAttribute("class", "profile-nav");
-
-        //unorderlist
-        unorderlist = document.createElement("ul")
-        profile_nav.append(unorderlist);
-
-        //list1
-        list1 = document.createElement("li");
-        unorderlist.append(list1);
-        // link_anchor
-        link_anchor1 = document.createElement("a");
-        link_anchor1.setAttribute("href", "#birth");
-        list1.append(link_anchor1);
-
-
-        //list1
-        list2 = document.createElement("li");
-        unorderlist.append(list2);
-        // link_anchor
-        link_anchor2 = document.createElement("a");
-        link_anchor2.setAttribute("href", "#education");
-        list1.append(link_anchor2);
-
-
-        //list1
-        list3 = document.createElement("li");
-        unorderlist.append(list3);
-        // link_anchor
-        link_anchor3 = document.createElement("a");
-        link_anchor3.setAttribute("href", "#movie");
-        list1.append(link_anchor3);
-
-
-        //list1
-        list4 = document.createElement("li");
-        unorderlist.append(list4);
-        // link_anchor
-        link_anchor4 = document.createElement("a");
-        link_anchor4.setAttribute("href", "#politics");
-        list1.append(link_anchor4);
-
-
-        //list1
-        list5 = document.createElement("li");
-        unorderlist.append(list5);
-        // link_anchor
-        link_anchor5 = document.createElement("a");
-        link_anchor5.setAttribute("href", "#family");
-        list1.append(link_anchor5);
-
-
-        //list1
-        list6 = document.createElement("li");
-        unorderlist.append(list6);
-        // link_anchor
-        link_anchor6 = document.createElement("a");
-        link_anchor6.setAttribute("href", "#income");
-        list1.append(link_anchor6);
-
-
-        document.querySelector(".cm-total-content").prepend(profile_nav);
-
-
-
-
-
-    </script>
+    <script src="../../../assets/javascript/profile.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
