--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -65,7 +65,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item pe-5">
-                            <a class="nav-link active" aria-current="page" href="../../index.html">முகப்பு</a>
+                            <a class="nav-link active" aria-current="page" href="../home/home.html">முகப்பு</a>
                         </li>
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="../portfolio/parties-profile.html">விவரம்</a>
