--- a/pages/your opinion/profilepage.html
+++ b/pages/your opinion/profilepage.html
@@ -93,27 +93,27 @@
                             <table class="table table-bordered">
                                 <caption>profile_page</caption>
                                 <tr>
-                                    <th>Gmail</th>
+                                    <th scope="col">Gmail</th>
                                     <td width="2%">:</td>
                                     <td id="email"></td>
                                 </tr>
                                 <tr>
-                                    <th>Age </th>
+                                    <th scope="col">Age </th>
                                     <td width="2%">:</td>
                                     <td><input type="text"></td>
                                 </tr>
                                 <tr>
-                                    <th>Gender</th>
+                                    <th scope="col">Gender</th>
                                     <td width="2%">:</td>
                                     <td><input type="text"></td>
                                 </tr>
                                 <tr>
-                                    <th>Address</th>
+                                    <th scope="col">Address</th>
                                     <td width="2%">:</td>
                                     <td><input type="text"></td>
                                 </tr>
                                 <tr>
-                                    <th>State</th>
+                                    <th scope="col">State</th>
                                     <td width="2%">:</td>
                                     <td><input type="text"></td>
                                 </tr>
