--- a/pages/your opinion/profilepage.html
+++ b/pages/your opinion/profilepage.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- <link rel="stylesheet" href="../../assets/css/"> -->
     <title>Document</title>
 
     <style>
@@ -49,10 +46,14 @@
             padding: 5px 10px;
             color: #000;
         }
-        .card-body table th{
+
+        .card-body table th {
             width: 30%;
         }
 
+        .card-body table th {
+            width: 2%;
+        }
     </style>
 </head>
 
@@ -81,8 +82,8 @@
                                 <span>mobile Number :</span>
                                 <p class="mb-0" id="mobile"></strong></p>
                             </div>
-                            
-                            
+
+
                         </div>
                     </div>
                 </div>
@@ -96,27 +97,27 @@
                                 <caption>profile_page</caption>
                                 <tr>
                                     <th scope="col">Gmail</th>
-                                    <td width="2%">:</td>
+                                    <td>:</td>
                                     <td id="email"></td>
                                 </tr>
                                 <tr>
                                     <th scope="col">Age </th>
-                                    <td width="2%">:</td>
+                                    <td>:</td>
                                     <td><input type="text"></td>
                                 </tr>
                                 <tr>
                                     <th scope="col">Gender</th>
-                                    <td width="2%">:</td>
+                                    <td>:</td>
                                     <td><input type="text"></td>
                                 </tr>
                                 <tr>
                                     <th scope="col">Address</th>
-                                    <td width="2%">:</td>
+                                    <td>:</td>
                                     <td><input type="text"></td>
                                 </tr>
                                 <tr>
                                     <th scope="col">State</th>
-                                    <td width="2%">:</td>
+                                    <td>:</td>
                                     <td><input type="text"></td>
                                 </tr>
 
@@ -156,7 +157,12 @@
         }
     </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
 
 </body>
 
